Insertion des identifiants

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td><!-- Remplacer le commentaire par votre Nom --></td>
-                <td><!-- Remplacer le commentaire par vos Prénom --></td>
-                <td><!-- Remplacer le commentaire par votre email --></td>
+               <tr>
+                <th scope="row">4</th>
+                <td>AGBOTON</td>
+                <td>Philippe</td>
+                <td>agbotonaxel3@gmail.com</td>
               </tr>
             </tbody>
           </table>
