--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td><!-- Remplacer le commentaire par votre Nom --></td>
-                <td><!-- Remplacer le commentaire par vos Prénom --></td>
-                <td><!-- Remplacer le commentaire par votre email --></td>
+                <th scope="row">20</th>
+                <td>GNANCADJA</td>
+                <td>Gilles-Déreck</td>
+                <td>gnancadjagillesdereck@gmail.com</td>
               </tr>
             </tbody>
           </table>
