--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td><!-- Remplacer le commentaire par votre Nom --></td>
-                <td><!-- Remplacer le commentaire par vos Prénom --></td>
-                <td><!-- Remplacer le commentaire par votre email --></td>
+                <th scope="row">12</th>
+                <td>IDOHOU</td>
+                <td>I Rose-Mary O</td>
+                <td>idohourose02@gmail.com</td>
               </tr>
             </tbody>
           </table>
