--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td><!-- Remplacer le commentaire par votre Nom --></td>
-                <td><!-- Remplacer le commentaire par vos Prénom --></td>
-                <td><!-- Remplacer le commentaire par votre email --></td>
+                <td>DOSSOU-YOVO</td>
+                <td> S. Juvencio E.</td>
+                <td>dossouyovojuvencio22@gmail.com</td>
               </tr>
-            </tbody>
+             </tbody>
           </table>
     </section>
 
