--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td><!-- Remplacer le commentaire par votre Nom --></td>
-                <td><!-- Remplacer le commentaire par vos Prénom --></td>
-                <td><!-- Remplacer le commentaire par votre email --></td>
+                <td><GAZARD</td>
+                <td>Constantia</td>
+                <td>constantiagazard2000@gmail.com</td>
               </tr>
             </tbody>
           </table>
