motification de fichier

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>DJIDONOU</td>
-                <td>David Wilfried</td>
-                <td>djidonoudavid99@gmail.com</td>
+                <td>ASSOGBA</td>
+                <td>Archimede</td>
+                <td>assogbaarchimede6741@gmail.com</td>
               </tr>
             </tbody>
           </table>
