--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>DJIDONOU</td>
-                <td>David Wilfried</td>
-                <td>djidonoudavid99@gmail.com</td>
+                <td><!-- Remplacer le commentaire par votre Nom --></td>
+                <td><!-- Remplacer le commentaire par vos Prénom --></td>
+                <td><!-- Remplacer le commentaire par votre email --></td>
               </tr>
             </tbody>
           </table>
