--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>DJIDONOU</td>
-                <td>David Wilfried</td>
-                <td>djidonoudavid99@gmail.com</td>
+                <th scope="row">51</th>
+                <td>MAZERI</td>
+                <td>Ducleche Chrish</td>
+                <td>chrishmazeri@gmail.com</td>
               </tr>
             </tbody>
           </table>
