mise en place du squelete du fichier index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <tr>
                 <th scope="row">51</th>
                 <td>MAZERI</td>
-                <td>Ducleche Chrish</td>
+                <td>Ducleche - Chrish</td>
                 <td>chrishmazeri@gmail.com</td>
               </tr>
             </tbody>
