Initialisation du fichier index.html

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>DJIDONOU</td>
-                <td>David Wilfried</td>
-                <td>djidonoudavid99@gmail.com</td>
+                <th scope="row">55</th>
+                <td>MITOU</td>
+                <td>Ulrich</td>
+                <td>mitou651@gmail.com</td>
               </tr>
             </tbody>
           </table>
