Enregistrement du fichier index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <td>David Wilfried</td>
                 <td>djidonoudavid99@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>KHALIE</td>
+                <td>Fadlalkerim</td>
+                <td>khaliaibrahim15@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
