--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td><!-- Remplacer le commentaire par votre Nom --></td>
-                <td><!-- Remplacer le commentaire par vos Prénom --></td>
-                <td><!-- Remplacer le commentaire par votre email --></td>
+                <td>HOUETO</td>
+                <td>Leindel</td>
               </tr>
+                <td>houetoleindel10@gmail.com</td>
             </tbody>
           </table>
     </section>
