--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               </tr>
               <tr>
                 <th scope="row">2</th>
+                <td>GODONOU</td>
+                <td>Samuel</td>
+                <td>marcelinesogan@gmail.com</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
