--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
             </thead>
             <tbody>
                <tr>
-                <th scope="row">4</th>
+                <th scope="row">1</th>
                 <td>AGBOTON</td>
                 <td>Philippe</td>
                 <td>agbotonaxel3@gmail.com</td>
+                <th scope="row">2</th>
+                <td>DJIDONOU</td>
+                <td>David Wilfried</td>
+                <td>djidonoudavid99@gmail.com</td>
               </tr>
             </tbody>
           </table>
