--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <td>IDOHOU</td>
                 <td>I Rose-Mary O</td>
                 <td>idohourose02@gmail.com</td>
+                <th scope="row">3</th>
+                <td>KOUKOUBOU</td>
+                <td>Gloria</td>
+                <td>idohourose02@gmail.com</td>
               </tr>
             </tbody>
           </table>
