--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <th scope="row">3</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
-                <td>idohourose02@gmail.com</td>
+                <td>koukougloria@gmail.com</td>
               </tr>
             </tbody>
           </table>
