--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>DANNON</td>
+                <td>Patrick M.</td>
+                <td>patrickdannon02@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
