ajout de mon nom

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>LOUGBEGNON</td>
+                <td>Othniel</td>
+                <td>elgloryd2001@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
