Ajout de mes informations

--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
+                <td>APLOGAN</td>
+                <td>Dérrick</td>
+                <td>derrickaplogantreize@gmail.com</td>
+              </tr>
+               <tr>
+                <th scope="row">2</th>
                 <td>DJIDONOU</td>
                 <td>David Wilfried</td>
                 <td>djidonoudavid99@gmail.com</td>
               </tr>
               <tr>
-                <th scope="row">2</th>
+                <th scope="row">3</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
