--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>KOUNOU</td>
+                <td>Grace Fanta</td>
+                <td>fantakounou0@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
