modification du fichier

--- a/index.html
+++ b/index.html
@@ -26,15 +26,9 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>DJIDONOU</td>
-                <td>David Wilfried</td>
-                <td>djidonoudavid99@gmail.com</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>KOUKOUBOU</td>
-                <td>Gloria</td>
-                <td>koukougloria@gmail.com</td>
+                <td>BELLO</td>
+                <td>Halid Kolawole Adissa</td>
+                <td>halidkolawole@gmail.com</td>
               </tr>
             </tbody>
           </table>
