--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
                 <td>David Wilfried</td>
                 <td>djidonoudavid99@gmail.com</td>
                 <th scope="row">2</th>
+                <td>BOSSOU</td>
+                <td>Luc Junior</td>
+                <td>lucjrbss@gmail.com</td>
+                <th scope="row">3</th>
                 <td>IDOHOU</td>
                 <td>I Rose-Mary O</td>
                 <td>idohourose02@gmail.com</td>
-                <th scope="row">3</th>
+                <th scope="row">4</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
