mise en place du squelette du fichier index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">49</th>
+                <td>KOUDEBY</td>
+                <td>Bedel</td>
+                <td>bedelk77@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
