Clonage et modification

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
+                <td>GOMEZ</td>
+                <td>Josué Miguel Césario</td>
+                <td>gomezjosuemiguel@gmail.com</td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
