Modification du fichier

--- a/index.html
+++ b/index.html
@@ -23,22 +23,30 @@
             <tbody>
              <tr>
                 <th scope="row">1</th>
+                <td>ABOGOUNRIN</td>
+                <td>Ayath</td>
+                <td>ayathabogounrin231@gmail.com</td>
+              </tr>
+             <tr>
+                <th scope="row">2</th>
                 <td>BOSSOU</td>
                 <td>Luc Junior</td>
                 <td>lucjrbss@gmail.com</td>
               </tr>
               <tr>
-                <th scope="row">2</th>
+                <th scope="row">3</th>
                 <td>DJIDONOU</td>
                 <td>David Wilfried</td>
                 <td>djidonoudavid99@gmail.com</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
+                <th scope="row">4</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+
+              <tr>
             </tbody>
           </table>
     </section>
