Modification enregistré du fichier index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+               <tr>
+                <th scope="row">9<th>
+                <td>HAZOUME</td>
+                <td>Esdras</td>
+                <td>hazoumesdras@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
