Enregistrement du fichier index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <td>David Wilfried</td>
                 <td>djidonoudavid99@gmail.com</td>
               </tr>
+                 <tr>
+                <th scope="row">1</th>
+                <td>MOUSTAPHA</td>
+                <td>Djalal</td>
+                <td>djalalmoustapha7@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
