--- a/index.html
+++ b/index.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Trombinoscope SRS 2021</title>
-  </head>
-  <body>
-    <h1>Trombinoscope SRS 2021</h1>
-    <section>
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nom</th>
-                <th scope="col">Prénom</th>
-                <th scope="col">Email</th>
-              </tr>
-            </thead>
-            <tbody>
-             <tr>
-                <th scope="row">1</th>
-                <td>BOSSOU</td>
-                <td>Luc Junior</td>
-                <td>lucjrbss@gmail.com</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>DJIDONOU</td>
-                <td>David Wilfried</td>
-                <td>djidonoudavid99@gmail.com</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>KOUKOUBOU</td>
-                <td>Gloria</td>
-                <td>koukougloria@gmail.com</td>
-              </tr>
-            </tbody>
-          </table>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--BOOSTRAP CSS-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootsrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="tp.css">
+	<title></title>
+</head>
+<body>
+<section>
+	<table class="table">
+		<thead>
+			<tr>
+				<th scope="col">N°</th>
+				<th scope="col">Noms</th>
+				<th scope="col">Prénoms</th>
+				<th scope="col">Email</th>
+
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th scope="row">1</th>
+				<td>KOUKOUBOU</td>
+				<td>Gloria</td>
+				<td>koukougloria@gmail.com</td>
+			</tr>
+			<tr>
+				<th scope="row">2</th>
+				<td>LOUGBEGNON</td>
+				<td>Othniel</td>
+				<td>elgloryd2001@gmail.com</td>
+			</tr>
+			<tr>
+				<th scope="row">3</th>
+				<td>KITI</td>
+				<td>Phoebé</td>
+				<td>meryxkiti@gmail.com</td>
+			</tr>
+
+		</tbody>
+	</table>
+</section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
+</body>
 </html>
