--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--BOOSTRAP CSS-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootsrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="tp.css">
+	
 	<title>Trombi-SRS-2021</title>
 </head>
 <body>
+	<style>
+		table{border-collapse: collapse;}
+		td, th /* Mettre une bordure sur les td ET les th */{border: 1px solid black;}
+	</style>
 <section>
 	<table class="table">
 		<thead>
