--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		table{border-collapse: collapse;}
 		td, th /* Mettre une bordure sur les td ET les th */{border: 1px solid black;}
 	</style>
+	<h1>TROMBI SRS 2021</h1>
 <section>
 	<table class="table">
 		<thead>
