HOUNDOLO Marie-Claude Enregistrement du fichier html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                 <td>djidonoudavid99@gmail.com</td>
               </tr>
               <tr>
+                <th scope="row">4</th>
+                <td>HOUNDOLO</td>
+                <td>Marie-Claude</td>
+                <td>stephaniehdl02@gmail.com</td>
+              </tr>
+              <tr>
                 <th scope="row">3</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
