mise en place du fichier html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>ADEOTI</td>
+                <td>Sadat  Bolalé Oladjidé </tr>
+                <td>Jurantduval@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
