modification du fichier html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">54</th>
+                <td>MAHOUSSI</td>
+                <td>Chimas</td>
+                <td>mahoussichimas25@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
