Mise en place des informations

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>TOBOSSOU</td>
+                <td>jacques-d'Evaldo</td>
+                <td>jacquestobossou@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
