--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>GBENOU </td>
+                <td>Loic</td>
+                <td>gbenouloic@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
