--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <td>Salim</td>
                 <td>alisalimdib7@gmail.com</td>
               </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>GNIMASSOU</td>
+                <td>Yannick</td>
+                <td>gnimassouyannick@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
