--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
+                <td>BOSSOU</td>
+                <td>Luc Junior</td>
+                <td>lucjrbss@gmail.com</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
                 <td>DJIDONOU</td>
                 <td>David Wilfried</td>
                 <td>djidonoudavid99@gmail.com</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>KOUKOUBOU</td>
+                <td>Gloria</td>
+                <td>koukougloria@gmail.com</td>
               </tr>
             </tbody>
           </table>
