--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+              tr>
+                <th scope="row">79</th>
+                <td>SIDI</td>
+                <td>Rayane</td>
+                <td>Sidirayane25@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
