Ajout de mes infos

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
+                <td>FATOKE</td>
+                <td>Fawaz</td>
+                <td>fatf98268@gmail.com</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
