Mise à jour du fichier index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
   <head>
     <!-- Required meta tags -->
@@ -38,6 +38,12 @@
                 <td>KOUKOUBOU</td>
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
+              </tr> 
+		  <tr>
+                <th scope="row">3</th>
+                <td>AZIABLE</td>
+                <td>Teddy</td>
+                <td>coolvisposey@gmail.com</td>
               </tr>
             </tbody>
           </table>
