mise à jour index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <td>Gloria</td>
                 <td>koukougloria@gmail.com</td>
               </tr>
+               <tr>
+                <th scope="row">83</th>
+                <td>KPONOU</td>
+                <td>David</td>
+                <td>davekponou15@gmail.com</td>
+              </tr>
             </tbody>
           </table>
     </section>
