Ajout des informations et modification

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
               </tr>
             </thead>
             <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>AMMARD</td>
+                <td>Anjorin</td>
+                <td>anjoringustavookp@gmail.com</td>
+              </tr>
              <tr>
                 <th scope="row">1</th>
                 <td>BOSSOU</td>
