--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <tbody>
              <tr>
                 <th scope="row">1</th>
+                <td>BISSIRIOU</td>
+                <td>Folachadé</td>
+                <td>bissiriounadjath@gmail.com</td>
+              </tr>
+             <tr>
+                <th scope="row">1</th>
                 <td>BOSSOU</td>
                 <td>Luc Junior</td>
                 <td>lucjrbss@gmail.com</td>
